--- a/translations/it.json
+++ b/translations/it.json
@@ -2,67 +2,67 @@
   "language": "Italiano",
   "author": "Dr_Mattone",
   "editors": "",
-  "action.info.attack": "fai un attacco con quest'unità. Seleziona un'unità e spingi su un bersaglio rosso per attaccare",
+  "action.info.attack": "Fai un attacco con quest'unità. Seleziona un'unità e clicca su un bersaglio rosso per attaccare.",
   "action.info.boost": "Boost",
-  "action.info.breakice": "Rompi il Ghiaccio",
-  "action.info.breakpeace": "Break Peace",
-  "action.info.build": "costruisci un {0} qui",
-  "action.info.capture": "cattura",
-  "action.info.capture2": "cattura questa città. Le città generano stelle ogni turno che puoi usare per sviluppare il tuo impero",
-  "action.info.cityreward": "Ricompensa della Città",
+  "action.info.breakice": "Rompi il Ghiaccio.",
+  "action.info.breakpeace": "Rompi la pace.",
+  "action.info.build": "Costruisci un {0} qui.",
+  "action.info.capture": "Cattura",
+  "action.info.capture2": "Cattura questa città. Le città generano stelle ogni turno che puoi usare per sviluppare il tuo impero.",
+  "action.info.cityreward": "Ricompensa della Città.",
   "action.info.decompose": "Decompose",
-  "action.info.destroy": "distruggi",
+  "action.info.destroy": "Distruggi",
   "action.info.disband": "Sciogli {0}",
   "action.info.do": "fai {0} qui",
-  "action.info.endturn": "finisci il turno per ottenere più risorse e muovere le unità. Spingi il pulsante PROSSIMO TURNO",
-  "action.info.establishembassy": "Establish Embassy",
-  "action.info.examineruins": "Examine",
+  "action.info.endturn": "finisci il turno per ottenere più risorse e muovere le unità. Spingi il pulsante PROSSIMO TURNO.",
+  "action.info.establishembassy": "Stabilisci una ambasciata.",
+  "action.info.examineruins": "Esamina le rovine.",
   "action.info.explode": "Explode",
-  "action.info.freezearea": "Area di Congelamento",
-  "action.info.healarea": "Area di Cura",
-  "action.info.healothers": "Cura gli Altri",
+  "action.info.freezearea": "Area di Congelamento.",
+  "action.info.healarea": "Area di Cura.",
+  "action.info.healothers": "Cura gli altri.",
   "action.info.meet": "Incontro",
-  "action.info.move": "muovi quest'unità. Seleziona quest'unità e muovila in un bersaglio blu",
-  "action.info.peacetreaty": "Offer Peace",
+  "action.info.move": "Muovi quest'unità. Seleziona quest'unità e muovila in un bersaglio blu.",
+  "action.info.peacetreaty": "Proponi la pace.",
   "action.info.promote": "Promuovi",
   "action.info.recover": "Recuperare",
   "action.info.remove": "Rimuovi",
-  "action.info.research": "ricerca {0}.",
+  "action.info.research": "Ricerca {0}",
   "action.info.reward": "Ricompensa",
-  "action.info.reward.population": "Questo farà aumentare la popolazione della città più vicina. Quando la popolazione sarà grande abbastanza la città salirà di livello e le risorse aumenteranno",
-  "action.info.reward.resources": "TQuesto ti darà una ricompensa istantanea in risorse di {0}",
+  "action.info.reward.population": "Questo farà aumentare la popolazione della città più vicina. Quando la popolazione sarà grande abbastanza la città salirà di livello e le risorse aumenteranno.",
+  "action.info.reward.resources": "Questo ti darà una ricompensa istantanea in risorse di {0}.",
   "action.info.stay": "Rimani",
-  "action.info.train": "allena un'unità in questa città. Le unità possono essere usate per esplorare il mondo, per attaccare i nemici e difendere le città",
+  "action.info.train": "Addestra un'unità in questa città. Le unità possono essere usate per esplorare il mondo, per attaccare i nemici e difendere le città.",
   "action.info.trip": "Viaggio",
-  "action.info.upgrade": "Upgrade to {0}",
-  "actionbox.building.decomposing": "Decomposing",
-  "actionbox.building.decomposing.info": "This improvement will decompose at the end of this turn",
+  "action.info.upgrade": "Migliora a {0}.",
+  "actionbox.building.decomposing": "Decomposizione",
+  "actionbox.building.decomposing.info": "Questo miglioramento si decomporrà alla fine di questo turno.",
   "actionbox.building.doit": "FAI",
-  "actionbox.building.level": "livello {0}/{1}",
-  "actionbox.building.requiredtech": "Hai bisogno di ricercare {0} per fare ciò, spingi il pulsante ALBERO DELLE TECH.",
-  "actionbox.building.techtree": "ALBERO DELLE TECH",
-  "actionbox.cantperformaction.description": "You cannot perform this action right now.",
-  "actionbox.city": "The city of {0}",
+  "actionbox.building.level": "Livello {0}/{1}",
+  "actionbox.building.requiredtech": "Hai bisogno di ricercare {0} per fare ciò, spingi il pulsante ALBERO TECNOLOGICO.",
+  "actionbox.building.techtree": "ALBERO TECNOLOGICO",
+  "actionbox.cantperformaction.description": "Non puoi eseguire questa azione ora.",
+  "actionbox.city": "{0}",
   "actionbox.city.level": "lvl {0}",
   "actionbox.confirm": "Conferma {0}",
   "actionbox.confirm.button": "SI",
-  "actionbox.confirm.info": "Sei sicuro di volerlo fare?",
-  "actionbox.confirm.info.breakpeace": "Are you sure you want to break the peace treaty? Doing so will disable all your units for the rest of this turn.",
+  "actionbox.confirm.info": "Vuoi veramente farlo?",
+  "actionbox.confirm.info.breakpeace": "Vuoi veramente rompere il trattato di pace? Se lo fai tutte le tue unità verranno disabilitate per il resto del turno.",
   "actionbox.confirm.info.breakpeace.disband": "It will also disband the {0} units you have in their territory.",
-  "actionbox.embassyestablished.description": "The embassy is already established.",
-  "actionbox.establishembassynocapital.description": "You cannot establish an embassy if the tribe has no capital.",
-  "actionbox.insufficientfunds": "Non hai abbastanza stelle. spingi il pulsante PROSSIMO TURNO.",
+  "actionbox.embassyestablished.description": "C'è già un'ambasciata stabilita qui.",
+  "actionbox.establishembassynocapital.description": "Non puoi stabilire un'ambasciata se la tribù non ha una capitale.",
+  "actionbox.insufficientfunds": "Non hai abbastanza stelle. Spingi il pulsante PROSSIMO TURNO.",
   "actionbox.pendingpeacetreaty.description": "Peace treaty pending. Waiting for {0} to respond",
-  "actionbox.pendingpeacetreaty.title": "Pending Peace Treaty",
-  "actionbox.tile.roads": "strade",
+  "actionbox.pendingpeacetreaty.title": "Trattato di pace in attesa.",
+  "actionbox.tile.roads": "Strade",
   "actionbox.unit.Boosted": "Boosted",
-  "actionbox.unit.Frozen": "Frozen",
-  "actionbox.unit.Invisible": "Invisible",
-  "actionbox.unit.Poisoned": "Poisoned",
+  "actionbox.unit.Frozen": "Congelato",
+  "actionbox.unit.Invisible": "Invisibile",
+  "actionbox.unit.Poisoned": "Avvelenato",
   "actionbox.unit.ability": "Abilità dell'unità",
   "actionbox.unit.kills": "{0}/{1} uccisioni",
   "actionbox.unit.new": "Addestra un nuovo {0} {1}",
-  "actionbox.unit.toomany": "(troppi)",
+  "actionbox.unit.toomany": "(Troppi)",
   "actionbox.unit.toomany.info": "Questa città non può contenere altre unità. Potenzia la città per altri spazi.",
   "actionbox.unit.train": "ALLENA",
   "actionbox.unit.upgrade": "POTENZIA",
@@ -70,11 +70,11 @@
   "actionbox.village": "Villagio",
   "actionbtn.remove.building": "Costruzione",
   "actionbtn.remove.roads": "Strade",
-  "backend.connecting": "Connecting to server...",
+  "backend.connecting": "Connessione al server...",
   "backend.connecting.failed": "Could not establish a connection to the server",
-  "backend.connection.lost": "Connection lost",
+  "backend.connection.lost": "Connessione persa",
   "backend.connection.lost.info": "Hold on while we're trying to reconnect",
-  "backend.login.failed": "Login failed",
+  "backend.login.failed": "Login fallito",
   "backend.login.successful": "Logged in as {0}",
   "bottommenu.gamestats": "Statistiche di Gioco",
   "bottommenu.menu": "Menu",
