--- a/translations/it.json
+++ b/translations/it.json
@@ -5,7 +5,7 @@
   "action.info.attack": "fai un attacco con quest'unità. Seleziona un'unità e spingi su un bersaglio rosso per attaccare",
   "action.info.boost": "Boost",
   "action.info.breakice": "Rompi il Ghiaccio",
-  "action.info.breakpeace": "Break Peace",
+  "action.info.breakpeace": "Rompi la pace",
   "action.info.build": "costruisci un {0} qui",
   "action.info.capture": "cattura",
   "action.info.capture2": "cattura questa città. Le città generano stelle ogni turno che puoi usare per sviluppare il tuo impero",
