--- a/translations/it.json
+++ b/translations/it.json
@@ -15,7 +15,7 @@
   "action.info.disband": "Sciogli {0}",
   "action.info.do": "fai {0} qui",
   "action.info.endturn": "finisci il turno per ottenere più risorse e muovere le unità. Spingi il pulsante PROSSIMO TURNO",
-  "action.info.establishembassy": "Establish Embassy",
+  "action.info.establishembassy": "Stabilisci un'ambasciata",
   "action.info.examineruins": "Examine",
   "action.info.explode": "Explode",
   "action.info.freezearea": "Area di Congelamento",
