--- a/translations/it.json
+++ b/translations/it.json
@@ -2,16 +2,16 @@
   "language": "Italiano",
   "author": "Dr_Mattone",
   "editors": "",
-  "action.info.attack": "fai un attacco con quest'unità. Seleziona un'unità e spingi su un bersaglio rosso per attaccare",
+  "action.info.attack": "Fai un attacco con quest'unità. Seleziona un'unità e spingi su un bersaglio rosso per attaccare.",
   "action.info.boost": "Boost",
   "action.info.breakice": "Rompi il Ghiaccio",
   "action.info.breakpeace": "Rompi la pace",
   "action.info.build": "costruisci un {0} qui",
   "action.info.capture": "cattura",
-  "action.info.capture2": "cattura questa città. Le città generano stelle ogni turno che puoi usare per sviluppare il tuo impero",
-  "action.info.cityreward": "Ricompensa della Città",
+  "action.info.capture2": "Cattura questa città. Le città generano stelle ogni turno che puoi usare per sviluppare il tuo impero.",
+  "action.info.cityreward": "Ricompensa della Città.",
   "action.info.decompose": "Decompose",
-  "action.info.destroy": "distruggi",
+  "action.info.destroy": "Distruggi",
   "action.info.disband": "Sciogli {0}",
   "action.info.do": "fai {0} qui",
   "action.info.endturn": "finisci il turno per ottenere più risorse e muovere le unità. Spingi il pulsante PROSSIMO TURNO",
